# tgrade-contracts

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATING.md  README.md
.circleci/: config.yml
contracts/tg4-engagement/: Cargo.toml  README.md
contracts/tg4-engagement/examples/: schema.rs
contracts/tg4-engagement/schema/: delegate_response.json  delegated_response.json  execute_msg.json  funds_response.json  instantiate_msg.json  query_msg.json  sudo_msg.json
contracts/tg4-engagement/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/tg4-engagement/src/multitest/: suite.rs
contracts/tg4-group/: Cargo.toml  README.md
contracts/tg4-group/examples/: schema.rs
contracts/tg4-group/schema/: query_msg.json  sudo_msg.json
contracts/tg4-group/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/tg4-mixer/: Cargo.toml  README.md
contracts/tg4-mixer/benches/: main.rs
contracts/tg4-mixer/examples/: schema.rs
contracts/tg4-mixer/schema/: execute_msg.json  instantiate_msg.json  query_msg.json  tg4_query_msg.json
contracts/tg4-mixer/src/: contract.rs  error.rs  functions.rs  msg.rs  state.rs
contracts/tg4-stake/: Cargo.toml  README.md
contracts/tg4-stake/examples/: schema.rs
contracts/tg4-stake/schema/: claims_response.json  execute_msg.json  instantiate_msg.json  preauth_response.json  query_msg.json  staked_response.json  unbonding_period_response.json
contracts/tg4-stake/src/: claim.rs  contract.rs  error.rs  msg.rs  state.rs
contracts/tgrade-ap-voting/: Cargo.toml  MIGRATING.md  README.md  TODO.txt
contracts/tgrade-ap-voting/examples/: schema.rs
contracts/tgrade-ap-voting/src/: contract.rs  error.rs  lib.rs  migration.rs  msg.rs  multitest.rs  state.rs
contracts/tgrade-ap-voting/src/multitest/: complaints.rs  suite.rs
contracts/tgrade-community-pool/: Cargo.toml  README.md
contracts/tgrade-community-pool/examples/: schema.rs
contracts/tgrade-community-pool/src/: contract.rs  msg.rs  multitest.rs
contracts/tgrade-community-pool/src/multitest/: suite.rs
contracts/tgrade-dispute-multisig/: Cargo.toml  NOTICE
contracts/tgrade-dispute-multisig/src/: contract.rs  integration_tests.rs  msg.rs  state.rs
contracts/tgrade-dso/: Cargo.toml  README.md
contracts/tgrade-dso/examples/: schema.rs
contracts/tgrade-dso/schema/: dso_response.json  escrow_response.json  execute_msg.json  instantiate_msg.json  nullable__escrow_status.json  proposal_content.json  proposal_list_response.json  proposal_response.json  query_msg.json
contracts/tgrade-dso/src/: contract.rs  error.rs  expiration.rs  helpers.rs  lib.rs  msg.rs  state.rs
contracts/tgrade-dso/src/tests/: bdd_tests.rs  mod.rs  unit_tests.rs
contracts/tgrade-gov-reflect/: Cargo.toml
contracts/tgrade-gov-reflect/examples/: schema.rs
contracts/tgrade-gov-reflect/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/tgrade-gov-reflect/src/: contract.rs  error.rs  msg.rs
contracts/tgrade-oc-proposals/: Cargo.toml  NOTICE  README.md
contracts/tgrade-oc-proposals/examples/: schema.rs
contracts/tgrade-oc-proposals/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/tgrade-oc-proposals/src/multitest/: suite.rs
contracts/tgrade-tc-payments/: Cargo.toml  README.md
contracts/tgrade-tc-payments/examples/: schema.rs
contracts/tgrade-tc-payments/src/: contract.rs  error.rs  lib.rs  migration.rs  msg.rs  multitest.rs  payment.rs  state.rs
contracts/tgrade-tc-payments/src/multitest/: admin.rs  migration.rs  reward_distribution.rs  suite.rs  update_config.rs
contracts/tgrade-trusted-circle/: Cargo.toml  README.md
contracts/tgrade-trusted-circle/examples/: schema.rs
contracts/tgrade-trusted-circle/schema/: escrow_list_response.json  execute_msg.json  instantiate_msg.json  proposal_content.json  proposal_list_response.json  proposal_response.json  query_msg.json  trusted_circle_response.json
contracts/tgrade-trusted-circle/src/: contract.rs  distribution.rs  error.rs  helpers.rs  lib.rs  migration.rs  msg.rs  state.rs
contracts/tgrade-trusted-circle/src/tests/: bdd_tests.rs  deny_list.rs  genesis.rs  mod.rs  suite.rs  unit_tests.rs
contracts/tgrade-validator-voting/: Cargo.toml
contracts/tgrade-validator-voting/examples/: schema.rs
contracts/tgrade-validator-voting/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/tgrade-validator-voting/src/multitest/: hackatom.rs  proposals.rs  suite.rs
contracts/tgrade-valset/: .gitignore  Cargo.toml  README.md  build.rs
contracts/tgrade-valset/examples/: schema.rs
contracts/tgrade-valset/schema/: config_response.json  distribution_msg.json  epoch_response.json  execute_msg.json  hook_msg.json  instantiate_msg.json  list_active_validators_response.json  list_validator_keys_response.json  list_validator_response.json  query_msg.json  rewards_distribution.json  rewards_instantiate_msg.json  validator_key_response.json  validator_response.json
contracts/tgrade-valset/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  proto.rs  rewards.rs  state.rs  test_helpers.rs  test_valset_stake.rs
contracts/tgrade-valset/src/multitest/: admin.rs  contract.rs  double_sign.rs  helpers.rs  jailing.rs  rewards_split.rs  slashing.rs  stake.rs  suite.rs
contracts/tgrade-vesting-account/: Cargo.toml  README.md
contracts/tgrade-vesting-account/examples/: schema.rs
contracts/tgrade-vesting-account/schema/: instantiate_msg.json
contracts/tgrade-vesting-account/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/tgrade-vesting-account/src/multitest/: suite.rs
docs/: Architecture.md
docs/medium/: Tgrade-Medium-Minimal.drawio  Tgrade-Medium-With-Gov.drawio
docs/sources/: Tgrade-Contracts-Gov.drawio  Tgrade-Contracts.drawio  TgradeContracts-Gov.drawio  TgradeContracts1.drawio
scripts/: diff_schema.sh  optimizer.sh  regenerate_schemas.sh  set_version.sh  update_changelog.sh
