[workspace]
members = ["contracts/*"]
resolver = "2"

[profile.release.package.tgrade-trusted-circle]
codegen-units = 1
incremental = false

[profile.release.package.tgrade-gov-reflect]
codegen-units = 1
incremental = false

[profile.release.package.tgrade-vesting-account]
codegen-units = 1
incremental = false

[profile.release.package.tgrade-oc-proposals]
codegen-units = 1
incremental = false

[profile.release.package.tgrade-ap-voting]
codegen-units = 1
incremental = false
