[package]
name = "tg4-group"
version = "0.2.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Simple TG4 implementation of group membership controlled by an admin"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { git = 'https://github.com/CosmWasm/cosmwasm-plus', branch = 'main' }
cw2 = { git = 'https://github.com/CosmWasm/cosmwasm-plus', branch = 'main' }
cw-controllers = { git = 'https://github.com/CosmWasm/cosmwasm-plus', branch = 'main' }
cw-storage-plus = { git = 'https://github.com/CosmWasm/cosmwasm-plus', branch = 'main', features = ["iterator"] }
tg4 = { path = "../../packages/tg4", version = "0.2.2" }
tg-controllers = { path = "../../packages/controllers", version = "0.2.2" }
cosmwasm-std = { version = "0.15.0" }
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }

[dev-dependencies]
cosmwasm-schema = { version = "0.15.0" }
