[package]
name = "tg4-mixer"
version = "0.4.0-rc2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "TG4 implementation that combines two different groups with a merge function"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.9.0" }
cw2 = { version = "0.9.0" }
cw20 = { version = "0.9.0" }
cw-storage-plus = { version = "0.9.0" }
tg4 = { path = "../../packages/tg4", version = "0.4.0-rc2" }
tg-controllers = { path = "../../packages/controllers", version = "0.4.0-rc2" }
tg-bindings = { path = "../../packages/bindings", version = "0.4.0-rc2" }
cosmwasm-std = { version = "0.16.0" }
integer-sqrt = { version = "0.1.5" }
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }

[dev-dependencies]
cw-multi-test = { version = "0.9.0" }
cosmwasm-schema = { version = "0.16.0" }
tg4-engagement = { path = "../tg4-engagement", version = "0.4.0-rc2", features = ["library"] }
tg4-stake = { path = "../tg4-stake", version = "0.4.0-rc2", features = ["library"] }
