[package]
name = "tg4-mixer"
version = "0.4.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "TG4 implementation that combines two different groups with a merge function"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = "0.10.0-soon"
cw2 = "0.10.0-soon"
cw20 = "0.10.0-soon"
cw-storage-plus = "0.10.0-soon"
tg4 = { path = "../../packages/tg4", version = "0.4.0" }
tg-utils = { path = "../../packages/utils", version = "0.4.0" }
tg-bindings = { path = "../../packages/bindings", version = "0.4.0" }
cosmwasm-std = "1.0.0-soon"
integer-sqrt = "0.1.5"
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }

[dev-dependencies]
cw-multi-test = { version = "0.10.0-soon" }
cosmwasm-schema = { version = "1.0.0-soon" }
tg4-engagement = { path = "../tg4-engagement", version = "0.4.0", features = ["library"] }
tg4-stake = { path = "../tg4-stake", version = "0.4.0", features = ["library"] }
