[package]
name = "tgrade-ap-voting"
version = "0.14.0"
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]
edition = "2018"
description = "Implementing tgrade-ap-voting"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.0"
cw2 = "0.16.0"
tgrade-dispute-multisig = { version = "0.14.0", path = "../tgrade-dispute-multisig" }
cw-utils = "0.16.0"
cw-storage-plus = "0.16.0"
schemars = "0.8.1"
semver = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"
tg-bindings = "0.15.1"
tg-voting-contract = "0.15.1"
tg-utils = "0.15.1"
tg3 = "0.15.1"

[dev-dependencies]
anyhow = "1"
assert_matches = "1.5"
cosmwasm-schema = "1.1.0"
cw-multi-test = "0.15.1"
cw-storage-plus = "0.16.0"
tg-bindings-test = "0.15.1"
tg-test-utils = "0.15.1"
tg4 = "0.15.1"
tg4-engagement = "0.15.1"
tgrade-oc-proposals = { path = "../tgrade-oc-proposals", version = "0.14.0" }
