[package]
name = "tgrade-community-pool"
version = "0.5.0-beta4"
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]
edition = "2018"
description = "Implementing tgrade-community-pool voting contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = "0.10.2"
cw3 = "0.10.2"
cosmwasm-std = "1.0.0-beta"
schemars = "0.8.1"
serde = { version = "1", default-features = false, features = ["derive"] }
tg-bindings = { path = "../../packages/bindings", version = "0.5.0-beta4" }
tg-voting-contract = { version = "0.5.0-beta4", path = "../../packages/voting-contract" }
thiserror = "1"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta"
