[package]
name = "tgrade-community-pool"
version = "v0.5.2"
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]
edition = "2018"
description = "Implementing tgrade-community-pool voting contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = "0.10.2"
cw3 = "0.10.2"
cosmwasm-std = "1.0.0-beta"
schemars = "0.8.1"
serde = { version = "1", default-features = false, features = ["derive"] }
tg-bindings = { path = "../../packages/bindings", version = "v0.5.2" }
tg-voting-contract = { version = "v0.5.2", path = "../../packages/voting-contract" }
tg4-engagement = { path = "../tg4-engagement", version = "v0.5.2", features = ["library"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.0.0-beta"
cw-multi-test = "0.10.2"
tg-bindings-test = { path = "../../packages/bindings-test", version = "v0.5.2" }
tg-test-utils = { version = "v0.5.2", path = "../../packages/test-utils" }
tg4 = { path = "../../packages/tg4", version = "v0.5.2" }
