[package]
name = "tgrade-dso"
version = "0.1.5"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>", "Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "DSO implementation based on TG4 for group membership"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.6.1" }
cw2 = { version = "0.6.1" }
cw3 = { version = "0.6.1" }
cw-controllers = { version = "0.6.1" }
cw-storage-plus = { version = "0.6.1", features = ["iterator"] }
tg4 = { path = "../../packages/tg4", version = "0.1.5" }
cosmwasm-std = { version = "0.14.0" }
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0" }
