[package]
name = "tgrade-dso"
version = "0.4.0"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>", "Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "DSO implementation based on TG4 for group membership"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = "0.10.0-soon"
cw2 = "0.10.0-soon"
cw3 = "0.10.0-soon"
cw-controllers = "0.10.0-soon"
cw-storage-plus = "0.10.0-soon"
tg4 = { path = "../../packages/tg4", version = "0.4.0" }
tg-utils = { path = "../../packages/utils", version = "0.4.0" }
cosmwasm-std = "1.0.0-soon"
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-soon" }
