[package]
name = "tgrade-oc-proposals"
version = "0.13.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implementing tgrade-oc-proposals"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw2 = "0.13.4"
cw-storage-plus = "0.13.4"
schemars = "0.8.1"
serde = { version = "1", default-features = false, features = ["derive"] }
tg3 = "0.13.0"
tg4 = "0.13.0"
tg4-engagement = { version = "0.13.0", features = ["library"] }
tg-bindings = "0.13.0"
tg-utils = "0.13.0"
tg-voting-contract = "0.13.0"
tgrade-valset = { version = "0.13.0", features = ["library"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"
tg-bindings-test = "0.13.0"
tg-test-utils = "0.13.0"
