[package]
name = "tgrade-oc-proposals"
version = "0.14.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implementing tgrade-oc-proposals"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.0"
cw2 = "0.16.0"
cw-storage-plus = "0.16.0"
cw-utils = "0.16.0"
schemars = "0.8.1"
serde = { version = "1", default-features = false, features = ["derive"] }
tg3 = "0.15.1"
tg4 = "0.15.1"
tg4-engagement = { version = "0.15.1", features = ["library"] }
tg-bindings = "0.15.1"
tg-utils = "0.15.1"
tg-voting-contract = "0.15.1"
tgrade-valset = { version = "0.15.1", features = ["library"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.1.0"
cw-multi-test = "0.15.0"
tg-bindings-test = "0.15.1"
tg-test-utils = "0.15.1"
