[package]
name = "tgrade-tc-payments"
version = "0.13.1"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>"]
edition = "2021"
description = "Oversight Community / Arbiter Pool payments contract"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
chrono = "0.4.19"
cosmwasm-schema = "1.0.0"
cosmwasm-std = "1.0.0"
cw2 = "0.13.4"
cw-controllers = "0.13.4"
cw-storage-plus = "0.13.4"
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tg-bindings = "0.13"
tg4 = "0.13"
thiserror = "1.0.21"

[dev-dependencies]
cw-multi-test = "0.13.4"
tg4-engagement = "0.13"
tg-voting-contract = "0.13"
tg-bindings-test = "0.13"
tg-utils = "0.13"
