[package]
name = "tgrade-trusted-circle"
version = "0.9.0"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>", "Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Trusted Circle implementation based on TG4 for group membership"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.2"
cw2 = "0.13.2"
cw-controllers = "0.13.2"
cw-storage-plus = "0.13.2"
tg3 = "0.9.0"
tg4 = "0.9.0"
tg-bindings = "0.9.0"
tg-utils = "0.9.0"
cosmwasm-std = "1.0.0-beta8"
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
semver = "1"
thiserror = "1.0.21"
tg-voting-contract = "0.9.0"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.0.0-beta8"
cw-multi-test = "0.13.2"
derivative = "2"
serde_json = "1.0.79"
tg-bindings-test = "0.9.0"
tg4-engagement = "0.9.0"
