[package]
name = "tgrade-trusted-circle"
version = "0.14.0"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>", "Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Trusted Circle implementation based on TG4 for group membership"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.0"
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw-controllers = "0.16.0"
cw-storage-plus = "0.15.1"
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
semver = "1"
tg3 = "0.15.0"
tg4 = "0.15.0"
tg-bindings = "0.15.0"
tg-utils = "0.15.0"
tg-voting-contract = "0.15.0"
thiserror = "1.0.21"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.1.0"
cw-multi-test = "0.15.1"
derivative = "2"
serde_json = "1.0.79"
tg-bindings-test = "0.15.0"
tg4-engagement = "0.15.0"
