[package]
name = "tgrade-validator-voting"
version = "0.5.0-beta4"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implementing tgrade-validator-voting"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = "0.10.3"
cw3 = "0.10.3"
cosmwasm-std = "1.0.0-beta"
schemars = "0.8.1"
serde = { version = "1", default-features = false, features = ["derive"] }
tg-bindings = { path = "../../packages/bindings", version = "0.5.0-beta4" }
tg-voting-contract = { version = "0.5.0-beta4", path = "../../packages/voting-contract" }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
cw0 = "0.10.3"
cosmwasm-schema = "1.0.0-beta"
cw-multi-test = "0.10.3"
cw-storage-plus = "0.10.3"
tg-bindings-test = { version = "0.5.0-beta4", path = "../../packages/bindings-test" }
tg-voting-contract = { version = "0.5.0-beta4", path = "../../packages/voting-contract" }
tg4 = { path = "../../packages/tg4", version = "0.5.0-beta4" }
tg4-engagement = { path = "../tg4-engagement", version = "0.5.0-beta4", features = ["library"] }
tgrade-oc-proposals = { version = "0.5.0-beta4", path = "../tgrade-oc-proposals" }
