[package]
name = "tgrade-valset"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Control the validator set based on membership of trusted cw4 contract"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.6.0-beta1" }
cw2 = { version = "0.6.0-beta1" }
cw4 = { version = "0.6.0-beta1" }
cw-controllers = { version = "0.6.0-beta1" }
cw-storage-plus = { version = "0.6.0-beta1", features = ["iterator"] }
cosmwasm-std = { version = "0.14.0-beta3" }
tgrade-bindings = { version = "0.1.0", path = "../../packages/bindings" }
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0-beta3" }
cw-multi-test = { version = "0.6.0-beta1" }
cw20 = { version = "0.6.0-beta1" }
cw4-group = { version = "0.6.0-beta1" }
cw4-stake = { version = "0.6.0-beta1" }
