[package]
name = "tgrade-valset"
version = "0.3.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Control the validator set based on membership of trusted tg4 contract"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.9.0" }
cw2 = { version = "0.9.0" }
tg4 = { path = "../../packages/tg4", version = "0.3.0" }
cw-controllers = { version = "0.9.0" }
cw-storage-plus = { version = "0.9.0" }
cosmwasm-std = { version = "0.16.0" }
tg-bindings = { version = "0.3.0", path = "../../packages/bindings" }
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cw-multi-test = { version = "0.9.0" }
tg4-group = { path = "../tg4-group", version = "0.3.0" }
tg4-stake = { path = "../tg4-stake", version = "0.3.0" }
