[package]
name = "tgrade-vesting-account"
version = "0.5.0-rc"
authors = ["Jakub Bogucki <jakub@confio.gmbh>"]
edition = "2018"
description = "Vesting Account as a contract"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0-beta"
cw0 = "0.10.2"
cw2 = "0.10.2"
cw-storage-plus = "0.10.2"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tg-bindings = { version = "0.5.0-rc", path = "../../packages/bindings" }
tg-utils = { version = "0.5.0-rc", path = "../../packages/utils" }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
derivative = "2"
cosmwasm-schema = "1.0.0-beta"
cw-multi-test = "0.10.2"
tg-bindings-test = { version = "0.5.0-rc", path = "../../packages/bindings-test" }
